unpackaged/main/default/objects/einsteinplay__Einstein_Settings__c/fields/einsteinplay__certificate_part_2__c.field-meta.xml
<CustomField>
    <fullName>einsteinplay__certificate_part_2__c</fullName>
    <label>certificate part 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>