unpackaged/main/default/objects/einsteinplay__Einstein_Settings__c/fields/einsteinplay__certificate_part_3__c.field-meta.xml
<CustomField>
    <fullName>einsteinplay__certificate_part_3__c</fullName>
    <label>certificate part 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>