unpackaged/main/default/objects/einsteinplay__Einstein_Settings__c/fields/einsteinplay__Einstein_EMail__c.field-meta.xml
<CustomField>
    <fullName>einsteinplay__Einstein_EMail__c</fullName>
    <label>Einstein EMail</label>
    <type>Email</type>
</CustomField>