unpackaged/main/default/objects/einsteinplay__Einstein_Settings__c/fields/einsteinplay__Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>einsteinplay__Secret_Key__c</fullName>
    <label>Secret Key</label>
    <type>TextArea</type>
</CustomField>